added image docs
